[project]
name = "aug-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "av>=16.1.0",
    "diffusers>=0.36.0",
    "numpy>=2.2.6",
    "pillow>=12.1.0",
    "torch>=2.9.1",
    "vllm>=0.14.0",
]
